fix footer z-index

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -20,6 +20,7 @@
 			padding-top: 0;
 			position: fixed;
 			width: 100%;
+			z-index: 10;
 		}
 
 		ul {
